Added GitHub and Netlify links to footer

--- a/index.html
+++ b/index.html
@@ -60,9 +60,18 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Lindsey Flatt</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/liflatt" target="_blank">Lindsey Flatt</a>
+          and is
+          <a
+            href="https://github.com/liflatt/weather-app-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://stalwart-sawine-c1da9a.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
