Updated Netlify link in footer

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             on GitHub</a
           >
           and
-          <a href="https://stalwart-sawine-c1da9a.netlify.app/" target="_blank"
+          <a
+            href="https://liflatt-weather-app-project.netlify.app/"
+            target="_blank"
             >hosted on Netlify</a
           >
         </p>
