Fixed issue with current temp icon display

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
             </p>
           </div>
           <div class="current-temp">
-            <div class="current-temp-emoji" id="current-temp-emoji-display">
+            <div class="current-temp-emoji" id="icon">
               <img
                 src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/broken-clouds-night.png"
+                class="current-emoji-emoji"
               />
             </div>
             <div class="current-temp-number" id="current-temp-number-display">
